--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             REIMAGINED DOODLE
         </h1>
         <p>
-            this is my paragraph text
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quam voluptates est, doloribus voluptatibus eos soluta consequatur quisquam ratione itaque ipsa dolore doloremque nobis totam nisi aspernatur deserunt excepturi. Corrupti!
         </p>
     </body>
 </html>
