added an assets folder

--- a/test.html
+++ b/test.html
@@ -9,5 +9,6 @@
 <body>
     <h1>I love cats</h1>
     <img src="https://placekitten.com/300/300" alt="kitty cat">
+    <img src="./assets/images/kitty.jpg" alt="another kitty">
 </body>
 </html>
