--- a/test.html
+++ b/test.html
@@ -9,6 +9,15 @@
 <body>
     <h1>I love cats</h1>
     <img src="https://placekitten.com/300/300" alt="kitty cat">
+    <br>
     <img src="./assets/images/kitty.jpg" alt="another kitty">
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur saepe, accusamus ex rerum quasi, corporis impedit quas dolorem iste facere nostrum quae unde perspiciatis perferendis animi explicabo. Quod, rem ipsum!
+    </p>
+    <h3>Top cats in the world</h3>
+    <ul>
+        <li>Deckster</li>
+        <li>Gibbs</li>
+    </ul>
 </body>
 </html>
