--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        REIMAGINED DOODLE
-    </head>
-    <body>
-        <h1>
-            REIMAGINED DOODLE
-        </h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quam voluptates est, doloribus voluptatibus eos soluta consequatur quisquam ratione itaque ipsa dolore doloremque nobis totam nisi aspernatur deserunt excepturi. Corrupti!
-        </p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cat Love</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+<body>
+    <h1>I love cats</h1>
+    <img src="https://placekitten.com/300/300" alt="kitty cat">
+    <br>
+    <img src="./assets/images/kitty.jpg" alt="another kitty">
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur saepe, accusamus ex rerum quasi, corporis impedit quas dolorem iste facere nostrum quae unde perspiciatis perferendis animi explicabo. Quod, rem ipsum!
+    </p>
+    <h3>Top cats in the world</h3>
+    <ul>
+        <li>Deckster</li>
+        <li>Gibbs</li>
+    </ul>
+</body>
 </html>
