--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <img src="https://placekitten.com/300/300" alt="kitty cat">
     <br>
     <img src="./assets/images/kitty.jpg" alt="another kitty">
-    <p>
+    <p class="blue-text">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur saepe, accusamus ex rerum quasi, corporis impedit quas dolorem iste facere nostrum quae unde perspiciatis perferendis animi explicabo. Quod, rem ipsum!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita reprehenderit perferendis eius eos obcaecati aut aspernatur aliquid excepturi quas, voluptas exercitationem consectetur unde ab facilis eveniet natus recusandae error? Facilis?
+    </p>
+    <p class="blue-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat minima quae eveniet ratione veniam in neque veritatis voluptate itaque repellendus nam sunt cum distinctio ab, reiciendis corrupti ipsa ut eum?
     </p>
     <h3>Top cats in the world</h3>
     <ul>
