played with more styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>I love cats</h1>
+    <header>
+        <h1>I love cats</h1>
+        <h2>look at the cats below</h2>
+    </header>
+    
     <img src="https://placekitten.com/300/300" alt="kitty cat">
     <br>
     <img src="./assets/images/kitty.jpg" alt="another kitty">
@@ -24,7 +28,7 @@
     <h3>Top cats in the world</h3>
     <ul>
         <li>Deckster</li>
-        <li>Gibbs</li>
+        <li id="white-text">Gibbs</li>
     </ul>
 </body>
 </html>
