added a new worst cats section

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
         <li>Deckster</li>
         <li id="white-text">Gibbs</li>
     </ul>
+    <section class="worst-cats">
+        <h4>Worst cats in the world</h4>
+        <ol>
+            <li>There are none.</li>
+        </ol>
+    </section>
 </body>
 </html>
