added a box model section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,15 @@
             <li>There are none.</li>
         </ol>
     </section>
+
+    <section class="box-model">
+        <h1>Box Model</h1>
+        <section id="box-1">
+            <p>1</p>
+        </section>
+        <section id="box-2">
+            <p>2</p>
+        </section>
+    </section>
 </body>
 </html>
