added a box model positioning section for practice

--- a/index.html
+++ b/index.html
@@ -46,5 +46,11 @@
             <p>2</p>
         </section>
     </section>
+
+    <section id="box-model-positioning">
+        <div id="box-a">
+            <h1>BOX A</h1>
+        </div>
+    </section>
 </body>
 </html>
