--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div id="box-a">
             <h1>BOX A</h1>
         </div>
+        <div id="box-b">
+            <h1>BOX B</h1>
+        </div>
     </section>
 </body>
 </html>
