added a new under construction section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
             <h1>BOX B</h1>
         </div>
     </section>
+
+    <section id="under-construction">
+        <h1>New Section Under Construction</h1>
+    </section>
 </body>
 </html>
