added a flexbox section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
             <h1>BOX B</h1>
         </div>
     </section>
+
+    <section id="flex-box">
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+    </section>
 </body>
 </html>
