added some spaces

--- a/index.html
+++ b/index.html
@@ -56,17 +56,16 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     <section id="flex-box">
         <div class="flex-item"></div>
         <div class="flex-item"></div>
         <div class="flex-item"></div>
         <div class="flex-item"></div>
         <div class="flex-item"></div>
-=======
+    </section>
+    
     <section id="under-construction">
         <h1>New Section Under Construction</h1>
->>>>>>> a9c782d7a296bfa337ddacb7b05448b6be8d9346
     </section>
 </body>
 </html>
