added a buttons section with hover effect

--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>I love cats</h1>
-        <h2>look at the cats below</h2>
+        <h1>Practice Code</h1>
+        <h2>Look at my glorious code below</h2>
     </header>
+    <div id="separator"></div>
+
+    <div id="buttons-demo">
+        <h2>Buttons</h2>
+        <button>Button 1</button>
+        <button>Button 2</button>
+        <button>Button 3</button>
+        <button>Button 4</button>
+
+    </div>
     
     <img src="https://placekitten.com/300/300" alt="kitty cat">
     <br>
@@ -63,7 +73,7 @@
         <div class="flex-item"></div>
         <div class="flex-item"></div>
     </section>
-    
+
     <section id="under-construction">
         <h1>New Section Under Construction</h1>
     </section>
